--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,7 +25,7 @@ jobs:
       - name: npm install & test
         run: |
           npm ci
-          npm run test
+          phpunit
       
       - name: Coveralls
         uses: coverallsapp/github-action@master
