--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,15 @@ jobs:
           mkdir -p build/logs
           cp coverage.xml build/logs/clover.xml
 
-      - name: Coveralls
-        uses: coverallsapp/github-action@master
-        with:
-          github-token: ${{ secrets.GITHUB_TOKEN }}
+#       - name: Coveralls
+#         uses: coverallsapp/github-action@master
+#         with:
+#           github-token: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Upload to Coveralls
+        env: 
+          COVERALLS_REPO_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          COVERALLS_RUN_LOCALLY: yes
+        run: |
+          composer require --dev php-coveralls/php-coveralls
+          vendor/bin/php-coveralls -v
