--- a/composer.json
+++ b/composer.json
@@ -23,11 +23,11 @@
   "require-dev": {
     "kint-php/kint": "^3.3",
     "phpunit/phpunit": "^9.5.10",
-    "ideasonpurpose/wp-test-stubs": "dev-main"
+    "ideasonpurpose/wp-test-stubs": "dev-main@dev"
   },
   "repositories": [
     {
-      "type": "vcs",
+      "type": "git",
       "url": "https://github.com/ideasonpurpose/wp-test-stubs"
     }
   ]
