--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "composer:require": "docker compose run --rm composer require",
     "composer:update": "docker compose run --rm composer update",
     "test": "docker compose run test",
-    "posttest": "replace-in-file '<file name=\"/app/' '<file name=\"./' coverage.xml --quiet",
+    "posttest": "replace-in-file '/<file name=\"\\/app\\//g' '<file name=\"./' coverage.xml --quiet --isRegex",
     "test:watch": "chokidar '{src,tests}/**/*.php' -c 'npm run test'",
     "version": "version-everything && auto-changelog && git add -u"
   },
@@ -64,7 +64,7 @@
     "@prettier/plugin-php": "^0.17.6",
     "auto-changelog": "^2.3.0",
     "chokidar-cli": "^3.0.0",
-    "prettier": "^2.4.1",
+    "prettier": "^2.5.0",
     "pretty-hrtime": "^1.0.3",
     "replace-in-file": "^6.3.2",
     "version-everything": "^0.6.4"
@@ -77,5 +77,7 @@
     "files": [
       "README.md"
     ]
+  },
+  "dependencies": {
   }
 }
