exclude all /.git* files & folders

--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
   },
   "archive": {
     "exclude": [
-      "/.github",
+      "/.git*",
       "/tests",
       "CHANGELOG.md",
       "docker-compose.yml",
