--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "composer:install": "docker compose run --rm composer",
     "composer:require": "docker compose run --rm composer require",
     "composer:update": "docker compose run --rm composer update",
-    "test": "docker compose run test",
+    "test": "docker compose run --rm test",
     "posttest": "replace-in-file '/<file name=\"\\/app\\//g' '<file name=\"./' coverage.xml --quiet --isRegex",
-    "test:watch": "chokidar '{src,tests}/**/*.php' -c 'npm run test'",
+    "test:watch": "chokidar '{src,tests}/**/*.php' -c 'npm run test' -t 3000",
     "preversion": "docker compose run --rm composer validate",
     "version": "version-everything && auto-changelog && git add -u"
   },
