--- a/.github/workflows/phpunit-coverage copy.yml
+++ b/.github/workflows/phpunit-coverage copy.yml
@@ -24,8 +24,8 @@ jobs:
         
       - name: new Composer?
         run: |
-          ls -la ~/.composer
-          ls -la ~/.composer/vendor
+          ls -la ~/.composer/vendor/bin
+          ~/.composer/vendor/bin/composer --version
 
       - name: Validate composer.json and composer.lock
         run: composer validate
