--- a/.github/workflows/phpunit-coverage copy.yml
+++ b/.github/workflows/phpunit-coverage copy.yml
@@ -13,19 +13,16 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       
-      - name: Which PHPUnit?
-        run: | 
-          which phpunit
-          phpunit --version
-          composer config --list --global
-        
       - name: Global install PHPUnit
         run: composer global require phpunit/phpunit --prefer-dist
         
+      - name: Update $PATH
+        run: echo "$GITHUB_WORKSPACE/.composer/vendor/bin" >> $GITHUB_PATH
+
       - name: new Composer?
         run: |
-          ls -la ~/.composer/vendor/bin
           ~/.composer/vendor/bin/phpunit --version
+          phpunit --version
 
       - name: Validate composer.json and composer.lock
         run: composer validate
