--- a/.github/workflows/phpunit-coverage copy.yml
+++ b/.github/workflows/phpunit-coverage copy.yml
@@ -29,7 +29,7 @@ jobs:
           XDEBUG_MODE: coverage
         run: phpunit
 
-      # The Coveralls repo token is found  on the project's Settings page
+      # The Coveralls repo token is found on the project's Settings page
       - name: Upload to Coveralls
         env:
           COVERALLS_REPO_TOKEN: ${{ secrets.COVERALLS_TOKEN }}
@@ -44,7 +44,7 @@ jobs:
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v2
         with:
-          fail_ci_if_error: true
+          fail_ci_if_error: false
           files: ./coverage.xml
           verbose: true
 
