update PHPUnit, bump deps, cleanup. Closes #1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,8 @@
 services:
+  # Utility service for running composer, provides a local volume for storing access tokens
+  # https://hub.docker.com/_/composer
   composer:
-    # https://hub.docker.com/_/composer
-    image: composer:2.1.12
+    image: composer:2.5
     user: "${UID:-1000}:${GID:-1000}"
     environment:
       COMPOSER_HOME: /.composer
@@ -10,8 +11,8 @@ services:
       - ~/.composer:/.composer
     command: install
 
+  # https://hub.docker.com/r/ideasonpurpose/phpunit-watch
   test:
-    # image: ideasonpurpose/phpunit-watch:dev
-    image: ideasonpurpose/phpunit-watch:0.2.0
+    image: ideasonpurpose/phpunit-watch:1.2.0
     volumes:
       - ./:/app
