--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,7 @@
     }
   },
   "require-dev": {
+    "phpunit/phpunit": "^10.2",
     "ideasonpurpose/wp-test-stubs": "dev-main@dev"
   },
   "archive": {
