--- a/package.json
+++ b/package.json
@@ -27,23 +27,13 @@
   "scripts": {
     "composer": "npm run composer:install",
     "composer:install": "docker compose run --rm composer",
-    "composer:require": "docker compose run --rm composer require",
     "composer:update": "docker compose run --rm composer update",
     "test": "docker compose run --rm test",
-    "posttest": "replace-in-file '/<file name=\"\\/app\\//g' '<file name=\"./' coverage.xml --quiet --isRegex",
-    "test:watch": "chokidar '{src,tests}/**/*.php' -c 'npm run test' -t 3000",
-    "preversion": "docker compose run --rm composer validate",
+    "test:watch": "docker compose run --rm test watch",
     "version": "version-everything && auto-changelog && git add -u"
   },
   "prettier": {
     "overrides": [
-      {
-        "files": "*.html",
-        "options": {
-          "printWidth": 120,
-          "tabWidth": 2
-        }
-      },
       {
         "files": "*.md",
         "options": {
@@ -53,7 +43,7 @@
       {
         "files": "*.php",
         "options": {
-          "printWidth": 100,
+          "printWidth": 120,
           "singleQuote": true,
           "tabWidth": 4,
           "trailingCommaPHP": true
@@ -62,13 +52,10 @@
     ]
   },
   "devDependencies": {
-    "@prettier/plugin-php": "^0.17.6",
-    "auto-changelog": "^2.3.0",
-    "chokidar-cli": "^3.0.0",
+    "@prettier/plugin-php": "^0.19.6",
+    "auto-changelog": "^2.4.0",
     "prettier": "^2.5.1",
-    "pretty-hrtime": "^1.0.3",
-    "replace-in-file": "^6.3.2",
-    "version-everything": "^0.6.4"
+    "version-everything": "^0.9.3"
   },
   "auto-changelog": {
     "package": true,
