--- a/.github/workflows/release-from-version-tag.yml
+++ b/.github/workflows/release-from-version-tag.yml
@@ -2,16 +2,17 @@ name: Create Release from Version Tags
 
 on:
   push:
-    branches: "*"
+    branches: [main, master]
     tags: ["v*"]
 
 jobs:
   build:
-    runs-on: ubuntu-20.04
-    name: Build, bundle and deploy to AWS
+    runs-on: ubuntu-24.04
+    name: Build Release
 
     steps:
-      - uses: actions/checkout@v2
+      # https://github.com/marketplace/actions/checkout
+      - uses: actions/checkout@v4
 
       - name: Set up REPO and TAG environment vars
         run: |
@@ -23,7 +24,10 @@ jobs:
         run: |
           echo "TAG=${GITHUB_REF#refs/tags/v}" >> $GITHUB_ENV
 
-      - name: Install dependencies
+      - name: Validate composer.json and composer.lock
+        run: composer validate
+
+      - name: Install PHP dependencies
         run: composer install --prefer-dist --no-progress --no-suggest
 
       - name: Create Zip archive with `composer archive`
